backend/service1/service1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service1-service
spec:
  ports:
    - nodePort: 31289
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: serviceapp1
  type: NodePort
